<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">FiveMealsMobileProject</string>
    <string name="login_username_text">Username</string>
    <string name="login_email_text">Email</string>
    <string name="login_password_text">Password</string>
    <string name="login_button_signIn">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="dont_have_a_account_sign_up">Dont Have a Account? Sign Up!</string>
    <string name="i_already_have_a_account">I Already Have A Account</string>
    <string name="create_an_account">Create An Account</string>
    <string name="emailCreateAccount">Email</string>
    <string name="already_have_a_accountCreateAccount">Already Have a Account?</string>
    <string name="sign_upCreateAccount">Sign Up</string>
    <string name="code_input_text_info" tools:ignore="ExtraTranslation">If you can not read QR Code, Input the code which is in the table below</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">Scan</string>
    <string name="add_to_order">Add to Order</string>
    <string name="submit">Submit</string>
    <string name="change_password">Change Password</string>
    <string name="Help">Help</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="logout">Logout</string>
    <string name="changePassword"><![CDATA[Change password >]]></string>
    <string name="waiting_queue">Waiting in queue…</string>
    <string name="delete_order">Delete order product</string>
    <string name="delete_order_confirmation">Do you wish do delete this order product?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delivered">Delivered</string>
    <string name="pay_all">Pay All</string>
</resources>