<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/textViewLoginForgotPassword"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.CreateNewAccountActivity">

    <TextView
        android:id="@+id/textViewCreateAccountPasswordShowOrHide1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/show_hide_password"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCreateAccountPassword"
        app:layout_constraintStart_toEndOf="@+id/editTextCreateAccountPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextCreateAccountPassword" />

    <EditText
        android:id="@+id/editTextCreateAccountUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login_username_text"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewCreateAccountLogo" />

    <EditText
        android:id="@+id/editTextCreateAccountPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/login_password_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        app:layout_constraintEnd_toEndOf="@+id/editTextCreateAccountEmail"
        app:layout_constraintStart_toStartOf="@+id/editTextCreateAccountEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateAccountEmail" />


    <Button
        android:id="@+id/buttonCreateAccountSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="onSignUp"
        android:text="@string/sign_upCreateAccount"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="@+id/editTextCreateAccountConfirmPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextCreateAccountConfirmPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateAccountConfirmPassword" />

    <ImageView
        android:id="@+id/imageViewCreateAccountLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="64dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logofivemeals"
        tools:ignore="ImageContrastCheck"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textViewCreateAccountHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:minHeight="48dp"
        android:onClick="onHaveAccountClicked"
        android:text="@string/already_have_a_accountCreateAccount"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonCreateAccountSignUp"
        app:layout_constraintStart_toStartOf="@+id/buttonCreateAccountSignUp" />

    <EditText
        android:id="@+id/editTextCreateAccountEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/emailCreateAccount"
        android:inputType="textWebEmailAddress|textEmailAddress|textEmailSubject"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="@+id/editTextCreateAccountUsername"
        app:layout_constraintStart_toStartOf="@+id/editTextCreateAccountUsername"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateAccountUsername" />

    <EditText
        android:id="@+id/editTextCreateAccountConfirmPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="Confirm password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/editTextCreateAccountPassword"
        app:layout_constraintStart_toStartOf="@+id/editTextCreateAccountPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextCreateAccountPassword" />

    <TextView
        android:id="@+id/textViewCreateAccountPasswordShowOrHide2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:background="@drawable/show_hide_password"
        app:layout_constraintBottom_toBottomOf="@+id/editTextCreateAccountConfirmPassword"
        app:layout_constraintStart_toEndOf="@+id/editTextCreateAccountConfirmPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextCreateAccountConfirmPassword"
        app:layout_constraintVertical_bias="0.461" />

</androidx.constraintlayout.widget.ConstraintLayout>